test/org/midica/testfiles/failing/include-soundfont-inside-block.midica
INCLUDE_FILE inc/instruments.midica

0 c /4

(
	SOUNDFONT ../working/java-emergency-soundfont.sf2
)
